# secure_lib

./: README.md
secure_lib_src/: .gitignore  CMakeLists.txt  PROJECT_PLAN.md  XorStr.hpp  build_android.sh  build_curl_arm64.sh  build_deps.sh  deploy.sh  native-lib.cpp  network_client.cpp  network_client.hpp  obfuscation.hpp  security.cpp  security.hpp  ssh_manager.cpp  ssh_manager.hpp  tbox_callback.hpp  tbox_keys.hpp  tbox_logic.cpp  tbox_logic.hpp  test_main.cpp  vin_utils.cpp  vin_utils.hpp
secure_lib_src/libs_dist/lib/: libcurl.la
secure_lib_src/libs_dist/lib/pkgconfig/: libcrypto.pc  libcurl.pc  libssh.pc  libssl.pc  openssl.pc
